@@ -4,7 +4,7 @@
 <!-- Ajout Variable -->
 	<variable name="PlayerPoster">
         		<value condition="!IsEmpty(Player.Art(tvshow.poster))">$INFO[Player.Art(tvshow.poster)]</value>
-        		<value condition="!IsEmpty(Player.Art(poster))">$INFO[Player.Art(poster)]</value>
+        		<value condition="!IsEmpty(Player.Art(poster))">$INFO[Player.Art(poster)]</value>        		
     	</variable>
 
 <!-- Ajout Variable -->
@@ -78,16 +78,16 @@
         <value>$INFO[ListItem.Icon]</value>
     </variable>
 
-<!-- Modification Variable -->
     <variable name="Image_Thumb2">
-        <value condition="Container.Content(episodes) | Window.IsVisible(MyPics.xml)">$INFO[ListItem.Art(thumb)]</value>
-        <value condition="!IsEmpty(ListItem.Art(fanart))">$INFO[ListItem.Art(fanart)]</value>
+        <value condition="!IsEmpty(ListItem.Art(landscape)) + Skin.HasSetting(show.tvshowsthumbs)">$INFO[ListItem.Art(landscape)]</value>
+        <value condition="!IsEmpty(ListItem.Art(fanart)) + !Container.Content(episodes)">$INFO[ListItem.Art(fanart)]</value>
+        <value condition="!IsEmpty(ListItem.Thumb) + Window.IsVisible(MyPics.xml) + Container.Content(episodes)">$INFO[ListItem.Thumb]</value>
         <value>$INFO[ListItem.Icon]</value>
     </variable>
 
 <!-- Ajout Variable -->    
-        <variable name="Image_Thumb">
-        <value condition="!IsEmpty(ListItem.Art(landscape)) + [Skin.HasSetting(show.moviesthumbs) | Skin.HasSetting(show.tvshowsthumbs)]">$INFO[ListItem.Art(landscape)]</value>
+    <variable name="Image_Thumb">
+        <value condition="!IsEmpty(ListItem.Art(landscape)) + Skin.HasSetting(show.moviesthumbs)">$INFO[ListItem.Art(landscape)]</value>
         <value condition="!IsEmpty(ListItem.Art(fanart)) + !Container.Content(episodes)">$INFO[ListItem.Art(fanart)]</value>
         <value condition="!IsEmpty(ListItem.Thumb) + Window.IsVisible(MyPics.xml) + Container.Content(episodes)">$INFO[ListItem.Thumb]</value>
         <value>$INFO[ListItem.Icon]</value>
@@ -128,7 +128,7 @@
         <value condition="Window.IsVisible(script-ExtendedInfo Script-VideoList.xml)">$INFO[Container(500).ListItem.Property(Fanart_small)]</value>
         <value condition="Window.IsVisible(script-ExtendedInfo Script-DialogVideoInfo.xml) + !IsEmpty(Window(home).Property(ExtendedInfo_fanart))">$INFO[Window(home).Property(ExtendedInfo_fanart)]</value>
         <value condition="Window.IsVisible(script-ExtendedInfo Script-DialogVideoInfo.xml) | Window.IsVisible(script-ExtendedInfo Script-DialogInfo.xml)">special://skin/extras/backgrounds/actor.jpg</value>
-        <value condition="Window.IsVisible(weather) + !IsEmpty(Skin.String(weather.fanart.path)) ">$INFO[Skin.String(weather.fanart.path)]$INFO[Window(Weather).Property(Current.FanartCode)]/</value>
+        <value condition="Window.IsVisible(weather) + !IsEmpty(Skin.String(weather.fanart.path))">$INFO[Skin.String(weather.fanart.path)]$INFO[Window(Weather).Property(Current.FanartCode)]/</value>
 <!-- Modification Value -->        
         <value condition="Window.IsVisible(home) + [StringCompare(Container(9000).ListItem.Property(widget),Weather) | [IsEmpty(Container(9000).ListItem.Property(widget)) + StringCompare(Skin.String(home.fallbackwidget),Weather)]] + !IsEmpty(Skin.String(weather.fanart.path)) + ![!IsEmpty(Container(9002).ListItem.Property(Background)) + Control.HasFocus(9002)] + SubString(Container(9001).ListItem.FileNameAndPath,jpg,Right)">$INFO[Container(9001).ListItem.FileNameAndPath]</value>
         <value condition="Window.IsVisible(home) + StringCompare(Container(9000).ListItem.Property(widgetType),picture) + !IsEmpty(Container(9001).ListItem.Icon)">$INFO[Container(9001).ListItem.Icon]</value>
