@@ -174,6 +174,17 @@
 <!-- Modification Aspectratio -->                            
                             <aspectratio>stretch</aspectratio>
                             <texture background="true">$VAR[Image_Thumb]</texture>
+                            <visible>Container.Content(movies)</visible>
+                        </control>
+                        <control type="image">
+                            <left>pad</left>
+                            <right>pad</right>
+                            <top>pad</top>
+                            <bottom>pad</bottom>
+<!-- Modification Aspectratio -->                            
+                            <aspectratio>stretch</aspectratio>
+                            <texture background="true">$VAR[Image_Thumb2]</texture>
+                            <visible>Container.Content(tvshows)</visible>
                         </control>
 <!-- Ajout Control -->                         
                         <control type="image">
@@ -248,6 +259,17 @@
 <!-- Modification Aspectratio -->                            
                             <aspectratio>stretch</aspectratio>
                             <texture background="true">$VAR[Image_Thumb]</texture>
+                            <visible>Container.Content(movies)</visible>
+                        </control>
+                        <control type="image">
+                            <left>pad</left>
+                            <right>pad</right>
+                            <top>pad</top>
+                            <bottom>pad</bottom>
+<!-- Modification Aspectratio -->                            
+                            <aspectratio>stretch</aspectratio>
+                            <texture background="true">$VAR[Image_Thumb2]</texture>
+                            <visible>Container.Content(tvshows)</visible>
                         </control>
 <!-- Ajout Control -->                        
                         <control type="image">
@@ -381,6 +403,18 @@
 <!-- Modification Aspectratio -->                            
                 <aspectratio>stretch</aspectratio>
                 <texture background="true">$VAR[Image_Thumb]</texture>
+                <visible>Container.Content(movies)</visible>
+            </control>
+            <control type="image">
+                <left>pad</left>
+                <right>pad</right>
+                <top>pad</top>
+                <bottom>pad</bottom>
+                <fadetime>200</fadetime>
+<!-- Modification Aspectratio -->                            
+                <aspectratio>stretch</aspectratio>
+                <texture background="true">$VAR[Image_Thumb2]</texture>
+                <visible>Container.Content(tvshows)</visible>
             </control>
 <!-- Ajout Control -->            
             <control type="image">
@@ -523,6 +557,17 @@
                             <aspectratio>scale</aspectratio>
                             <texture background="true">$VAR[Image_Thumb]</texture>
                             <animation effect="fade" start="100" end="25" condition="true">Conditional</animation>
+                            <visible>Container.Content(movies)</visible>
+                        </control>
+                        <control type="image">
+                            <left>pad</left>
+                            <right>pad</right>
+                            <top>pad</top>
+                            <bottom>pad</bottom>
+                            <aspectratio>scale</aspectratio>
+                            <texture background="true">$VAR[Image_Thumb2]</texture>
+                            <animation effect="fade" start="100" end="25" condition="true">Conditional</animation>
+                            <visible>Container.Content(tvshows)</visible>
                         </control>
 <!-- Ajout Control -->                        
                         <control type="image">
@@ -573,6 +618,18 @@
                                 <texture background="true">$VAR[Image_Thumb]</texture>
                                 <animation effect="fade" start="100" end="25" time="200" reversible="false">UnFocus</animation>
                                 <animation effect="fade" start="25" end="100" time="200">Focus</animation>
+                                <visible>Container.Content(movies)</visible>
+                            </control>
+                            <control type="image">
+                                <left>pad</left>
+                                <right>pad</right>
+                                <top>pad</top>
+                                <bottom>pad</bottom>
+                                <aspectratio>scale</aspectratio>
+                                <texture background="true">$VAR[Image_Thumb2]</texture>
+                                <animation effect="fade" start="100" end="25" time="200" reversible="false">UnFocus</animation>
+                                <animation effect="fade" start="25" end="100" time="200">Focus</animation>
+                                <visible>Container.Content(tvshows)</visible>
                             </control>
 <!-- Ajout Control -->                        
                         <control type="image">
